syntax = "proto3";

package thermostat.app;

option java_multiple_files = true;
option java_package = "com.sid.thermostat.app.protobuf";

message Data {
	string serial_no = 1;
	uint64 device_time = 2;
	float temperature = 3;	
}

message ProvisioningRequest {
	string serial_no = 1;
	string ip_address = 2;	
}

message ProvisioningResponse {
	enum prov_status {
		SUCCESS = 0;
		FAILED = 1;
	}
	string serial_no = 1;
	string config_topic = 2;
	string data_topic = 3;
	prov_status status = 4;
	int32 qos = 5;
}